<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_input_mode">
        <ListPreference
            android:key="input_mode"
            android:title="@string/pref_input_mode"
            android:entries="@array/input_mode_entries"
            android:entryValues="@array/input_mode_values"
            android:defaultValue="pinyin" />
        <ListPreference
            android:key="rime_scheme_set"
            android:title="@string/pref_rime_scheme_set"
            android:summary="@string/pref_rime_loading" />
        <ListPreference
            android:key="rime_schema"
            android:title="@string/pref_rime_schema"
            android:summary="@string/pref_rime_loading" />
        <Preference
            android:key="rime_shared_dir"
            android:title="@string/pref_rime_shared_dir"
            android:summary="@string/pref_rime_shared_dir_summary" />
        <Preference
            android:key="rime_import_shared_dir"
            android:title="@string/pref_rime_import_shared_dir"
            android:summary="@string/pref_rime_import_shared_dir_summary" />
        <Preference
            android:key="rime_export_shared_dir"
            android:title="@string/pref_rime_export_shared_dir"
            android:summary="@string/pref_rime_export_shared_dir_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="键盘">
        <SeekBarPreference
            android:key="keyboard_height"
            android:title="@string/pref_keyboard_height"
            android:defaultValue="100"
            android:max="150"
            app:min="50"
            app:showSeekBarValue="true" />
        <Preference
            android:key="keyboard_height_reset"
            android:title="@string/pref_keyboard_height_reset"
            android:summary="@string/pref_keyboard_height_reset_summary" />
        <SwitchPreferenceCompat
            android:key="key_sound"
            android:title="@string/pref_sound"
            android:defaultValue="true" />
        <SwitchPreferenceCompat
            android:key="key_vibrate"
            android:title="@string/pref_vibrate"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="隐私">
        <Preference
            android:key="privacy"
            android:title="@string/pref_privacy"
            android:summary="@string/pref_privacy_summary"
            android:selectable="false" />
    </PreferenceCategory>

</PreferenceScreen>